parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON block DOT
Rule 2     block -> label_part const_part type_part var_part subprogram_declarations compound_stmt
Rule 3     label_part -> LABEL label_list SEMICOLON
Rule 4     label_part -> empty
Rule 5     label_list -> label_list COMMA NUMBER
Rule 6     label_list -> NUMBER
Rule 7     const_part -> CONST const_list
Rule 8     const_part -> empty
Rule 9     const_list -> const_list const_def
Rule 10    const_list -> const_def
Rule 11    const_def -> ID EQ literal SEMICOLON
Rule 12    type_part -> TYPE type_list
Rule 13    type_part -> empty
Rule 14    type_list -> type_list type_def
Rule 15    type_list -> type_def
Rule 16    type_def -> ID EQ type_specifier SEMICOLON
Rule 17    var_part -> VAR var_declaration_list
Rule 18    var_part -> empty
Rule 19    var_declaration_list -> var_declaration_list var_declaration
Rule 20    var_declaration_list -> var_declaration
Rule 21    var_declaration -> id_list COLON type_specifier SEMICOLON
Rule 22    var_declaration -> id_list COLON type_specifier error
Rule 23    id_list -> id_list COMMA ID
Rule 24    id_list -> ID
Rule 25    type_specifier -> INTEGER
Rule 26    type_specifier -> REAL
Rule 27    type_specifier -> BOOLEAN
Rule 28    type_specifier -> CHAR
Rule 29    type_specifier -> STRING
Rule 30    type_specifier -> ARRAY LBR NUMBER RANGE NUMBER RBR OF type_specifier
Rule 31    type_specifier -> RECORD field_list END
Rule 32    type_specifier -> SET OF type_specifier
Rule 33    type_specifier -> FILE OF type_specifier
Rule 34    type_specifier -> FILE
Rule 35    type_specifier -> PACKED type_specifier
Rule 36    type_specifier -> ID
Rule 37    field_list -> field_list SEMICOLON field_declaration
Rule 38    field_list -> field_declaration
Rule 39    field_list -> empty
Rule 40    field_declaration -> id_list COLON type_specifier
Rule 41    subprogram_declarations -> subprogram_declarations subprogram_declaration
Rule 42    subprogram_declarations -> empty
Rule 43    subprogram_declaration -> function_declaration
Rule 44    subprogram_declaration -> procedure_declaration
Rule 45    function_declaration -> FUNCTION ID LPAR params RPAR COLON type_specifier SEMICOLON subblock SEMICOLON
Rule 46    procedure_declaration -> PROCEDURE ID LPAR params RPAR SEMICOLON subblock SEMICOLON
Rule 47    subblock -> label_part var_part compound_stmt
Rule 48    params -> param_list
Rule 49    params -> empty
Rule 50    param_list -> param_list SEMICOLON param
Rule 51    param_list -> param
Rule 52    param -> id_list COLON type_specifier
Rule 53    compound_stmt -> BEGIN statement_list END
Rule 54    statement_list -> statement_list SEMICOLON statement
Rule 55    statement_list -> statement
Rule 56    statement_list -> statement_list SEMICOLON error
Rule 57    statement -> assignment_stmt
Rule 58    statement -> compound_stmt
Rule 59    statement -> if_stmt
Rule 60    statement -> while_stmt
Rule 61    statement -> for_stmt
Rule 62    statement -> repeat_stmt
Rule 63    statement -> case_stmt
Rule 64    statement -> goto_stmt
Rule 65    statement -> with_stmt
Rule 66    statement -> labeled_stmt
Rule 67    statement -> procedure_call_stmt
Rule 68    statement -> empty
Rule 69    assignment_stmt -> variable ASSIGN expression
Rule 70    if_stmt -> IF expression THEN statement
Rule 71    if_stmt -> IF expression THEN statement ELSE statement
Rule 72    while_stmt -> WHILE expression DO statement
Rule 73    for_stmt -> FOR ID ASSIGN expression TO expression DO statement
Rule 74    for_stmt -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 75    repeat_stmt -> REPEAT statement_list UNTIL expression
Rule 76    case_stmt -> CASE expression OF case_list END
Rule 77    case_stmt -> CASE expression OF case_list ELSE statement END
Rule 78    case_list -> case_list case_element
Rule 79    case_list -> case_element
Rule 80    case_element -> case_label_list COLON statement SEMICOLON
Rule 81    case_label_list -> case_label_list COMMA literal
Rule 82    case_label_list -> literal
Rule 83    goto_stmt -> GOTO NUMBER
Rule 84    labeled_stmt -> NUMBER COLON statement
Rule 85    with_stmt -> WITH variable_list DO statement
Rule 86    variable_list -> variable_list COMMA variable
Rule 87    variable_list -> variable
Rule 88    procedure_call_stmt -> ID LPAR args RPAR
Rule 89    procedure_call_stmt -> ID
Rule 90    variable -> ID
Rule 91    variable -> ID LBR expression RBR
Rule 92    variable -> variable DOT ID
Rule 93    expression -> simple_expression relop simple_expression
Rule 94    expression -> simple_expression
Rule 95    expression -> simple_expression IN set_constructor
Rule 96    relop -> EQ
Rule 97    relop -> NE
Rule 98    relop -> LT
Rule 99    relop -> GT
Rule 100   relop -> LE
Rule 101   relop -> GE
Rule 102   simple_expression -> simple_expression addop term
Rule 103   simple_expression -> term
Rule 104   addop -> PLUS
Rule 105   addop -> MINUS
Rule 106   addop -> OR
Rule 107   term -> term mulop factor
Rule 108   term -> factor
Rule 109   mulop -> TIMES
Rule 110   mulop -> DIVISION
Rule 111   mulop -> DIV
Rule 112   mulop -> MOD
Rule 113   mulop -> AND
Rule 114   factor -> NUMBER
Rule 115   factor -> CHARCONST
Rule 116   factor -> NIL
Rule 117   factor -> variable
Rule 118   factor -> ID LPAR args RPAR
Rule 119   factor -> LPAR expression RPAR
Rule 120   factor -> NOT factor
Rule 121   factor -> set_constructor
Rule 122   set_constructor -> LBR set_element_list RBR
Rule 123   set_constructor -> LBR RBR
Rule 124   set_element_list -> set_element_list COMMA set_element
Rule 125   set_element_list -> set_element
Rule 126   set_element -> expression RANGE expression
Rule 127   set_element -> expression
Rule 128   args -> args_list
Rule 129   args -> empty
Rule 130   args_list -> args_list COMMA expression
Rule 131   args_list -> expression
Rule 132   literal -> NUMBER
Rule 133   literal -> CHARCONST
Rule 134   empty -> <empty>

Terminals, with rules where they appear

AND                  : 113
ARRAY                : 30
ASSIGN               : 69 73 74
BEGIN                : 53
BOOLEAN              : 27
CASE                 : 76 77
CHAR                 : 28
CHARCONST            : 115 133
COLON                : 21 22 40 45 52 80 84
COMMA                : 5 23 81 86 124 130
CONST                : 7
DIV                  : 111
DIVISION             : 110
DO                   : 72 73 74 85
DOT                  : 1 92
DOWNTO               : 74
ELSE                 : 71 77
END                  : 31 53 76 77
EQ                   : 11 16 96
FILE                 : 33 34
FOR                  : 73 74
FUNCTION             : 45
GE                   : 101
GOTO                 : 83
GT                   : 99
ID                   : 1 11 16 23 24 36 45 46 73 74 88 89 90 91 92 118
IF                   : 70 71
IN                   : 95
INTEGER              : 25
LABEL                : 3
LBR                  : 30 91 122 123
LE                   : 100
LPAR                 : 45 46 88 118 119
LT                   : 98
MINUS                : 105
MOD                  : 112
NE                   : 97
NIL                  : 116
NOT                  : 120
NUMBER               : 5 6 30 30 83 84 114 132
OF                   : 30 32 33 76 77
OR                   : 106
PACKED               : 35
PLUS                 : 104
PROCEDURE            : 46
PROGRAM              : 1
RANGE                : 30 126
RBR                  : 30 91 122 123
REAL                 : 26
RECORD               : 31
REPEAT               : 75
RPAR                 : 45 46 88 118 119
SEMICOLON            : 1 3 11 16 21 37 45 45 46 46 50 54 56 80
SET                  : 32
STRING               : 29
THEN                 : 70 71
TIMES                : 109
TO                   : 73
TYPE                 : 12
UNTIL                : 75
VAR                  : 17
WHILE                : 72
WITH                 : 85
error                : 22 56

Nonterminals, with rules where they appear

addop                : 102
args                 : 88 118
args_list            : 128 130
assignment_stmt      : 57
block                : 1
case_element         : 78 79
case_label_list      : 80 81
case_list            : 76 77 78
case_stmt            : 63
compound_stmt        : 2 47 58
const_def            : 9 10
const_list           : 7 9
const_part           : 2
empty                : 4 8 13 18 39 42 49 68 129
expression           : 69 70 71 72 73 73 74 74 75 76 77 91 119 126 126 127 130 131
factor               : 107 108 120
field_declaration    : 37 38
field_list           : 31 37
for_stmt             : 61
function_declaration : 43
goto_stmt            : 64
id_list              : 21 22 23 40 52
if_stmt              : 59
label_list           : 3 5
label_part           : 2 47
labeled_stmt         : 66
literal              : 11 81 82
mulop                : 107
param                : 50 51
param_list           : 48 50
params               : 45 46
procedure_call_stmt  : 67
procedure_declaration : 44
program              : 0
relop                : 93
repeat_stmt          : 62
set_constructor      : 95 121
set_element          : 124 125
set_element_list     : 122 124
simple_expression    : 93 93 94 95 102
statement            : 54 55 70 71 71 72 73 74 77 80 84 85
statement_list       : 53 54 56 75
subblock             : 45 46
subprogram_declaration : 41
subprogram_declarations : 2 41
term                 : 102 103 107
type_def             : 14 15
type_list            : 12 14
type_part            : 2
type_specifier       : 16 21 22 30 32 33 35 40 45 52
var_declaration      : 19 20
var_declaration_list : 17 19
var_part             : 2 47
variable             : 69 86 87 92 117
variable_list        : 85 86
while_stmt           : 60
with_stmt            : 65

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . block DOT
    (2) block -> . label_part const_part type_part var_part subprogram_declarations compound_stmt
    (3) label_part -> . LABEL label_list SEMICOLON
    (4) label_part -> . empty
    (134) empty -> .

    LABEL           shift and go to state 7
    CONST           reduce using rule 134 (empty -> .)
    TYPE            reduce using rule 134 (empty -> .)
    VAR             reduce using rule 134 (empty -> .)
    BEGIN           reduce using rule 134 (empty -> .)
    FUNCTION        reduce using rule 134 (empty -> .)
    PROCEDURE       reduce using rule 134 (empty -> .)

    block                          shift and go to state 5
    label_part                     shift and go to state 6
    empty                          shift and go to state 8

state 5

    (1) program -> PROGRAM ID SEMICOLON block . DOT

    DOT             shift and go to state 9


state 6

    (2) block -> label_part . const_part type_part var_part subprogram_declarations compound_stmt
    (7) const_part -> . CONST const_list
    (8) const_part -> . empty
    (134) empty -> .

    CONST           shift and go to state 11
    TYPE            reduce using rule 134 (empty -> .)
    VAR             reduce using rule 134 (empty -> .)
    BEGIN           reduce using rule 134 (empty -> .)
    FUNCTION        reduce using rule 134 (empty -> .)
    PROCEDURE       reduce using rule 134 (empty -> .)

    const_part                     shift and go to state 10
    empty                          shift and go to state 12

state 7

    (3) label_part -> LABEL . label_list SEMICOLON
    (5) label_list -> . label_list COMMA NUMBER
    (6) label_list -> . NUMBER

    NUMBER          shift and go to state 14

    label_list                     shift and go to state 13

state 8

    (4) label_part -> empty .

    CONST           reduce using rule 4 (label_part -> empty .)
    TYPE            reduce using rule 4 (label_part -> empty .)
    VAR             reduce using rule 4 (label_part -> empty .)
    BEGIN           reduce using rule 4 (label_part -> empty .)
    FUNCTION        reduce using rule 4 (label_part -> empty .)
    PROCEDURE       reduce using rule 4 (label_part -> empty .)


state 9

    (1) program -> PROGRAM ID SEMICOLON block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON block DOT .)


state 10

    (2) block -> label_part const_part . type_part var_part subprogram_declarations compound_stmt
    (12) type_part -> . TYPE type_list
    (13) type_part -> . empty
    (134) empty -> .

    TYPE            shift and go to state 16
    VAR             reduce using rule 134 (empty -> .)
    BEGIN           reduce using rule 134 (empty -> .)
    FUNCTION        reduce using rule 134 (empty -> .)
    PROCEDURE       reduce using rule 134 (empty -> .)

    type_part                      shift and go to state 15
    empty                          shift and go to state 17

state 11

    (7) const_part -> CONST . const_list
    (9) const_list -> . const_list const_def
    (10) const_list -> . const_def
    (11) const_def -> . ID EQ literal SEMICOLON

    ID              shift and go to state 20

    const_list                     shift and go to state 18
    const_def                      shift and go to state 19

state 12

    (8) const_part -> empty .

    TYPE            reduce using rule 8 (const_part -> empty .)
    VAR             reduce using rule 8 (const_part -> empty .)
    BEGIN           reduce using rule 8 (const_part -> empty .)
    FUNCTION        reduce using rule 8 (const_part -> empty .)
    PROCEDURE       reduce using rule 8 (const_part -> empty .)


state 13

    (3) label_part -> LABEL label_list . SEMICOLON
    (5) label_list -> label_list . COMMA NUMBER

    SEMICOLON       shift and go to state 21
    COMMA           shift and go to state 22


state 14

    (6) label_list -> NUMBER .

    SEMICOLON       reduce using rule 6 (label_list -> NUMBER .)
    COMMA           reduce using rule 6 (label_list -> NUMBER .)


state 15

    (2) block -> label_part const_part type_part . var_part subprogram_declarations compound_stmt
    (17) var_part -> . VAR var_declaration_list
    (18) var_part -> . empty
    (134) empty -> .

    VAR             shift and go to state 24
    BEGIN           reduce using rule 134 (empty -> .)
    FUNCTION        reduce using rule 134 (empty -> .)
    PROCEDURE       reduce using rule 134 (empty -> .)

    var_part                       shift and go to state 23
    empty                          shift and go to state 25

state 16

    (12) type_part -> TYPE . type_list
    (14) type_list -> . type_list type_def
    (15) type_list -> . type_def
    (16) type_def -> . ID EQ type_specifier SEMICOLON

    ID              shift and go to state 28

    type_list                      shift and go to state 26
    type_def                       shift and go to state 27

state 17

    (13) type_part -> empty .

    VAR             reduce using rule 13 (type_part -> empty .)
    BEGIN           reduce using rule 13 (type_part -> empty .)
    FUNCTION        reduce using rule 13 (type_part -> empty .)
    PROCEDURE       reduce using rule 13 (type_part -> empty .)


state 18

    (7) const_part -> CONST const_list .
    (9) const_list -> const_list . const_def
    (11) const_def -> . ID EQ literal SEMICOLON

    TYPE            reduce using rule 7 (const_part -> CONST const_list .)
    VAR             reduce using rule 7 (const_part -> CONST const_list .)
    BEGIN           reduce using rule 7 (const_part -> CONST const_list .)
    FUNCTION        reduce using rule 7 (const_part -> CONST const_list .)
    PROCEDURE       reduce using rule 7 (const_part -> CONST const_list .)
    ID              shift and go to state 20

    const_def                      shift and go to state 29

state 19

    (10) const_list -> const_def .

    ID              reduce using rule 10 (const_list -> const_def .)
    TYPE            reduce using rule 10 (const_list -> const_def .)
    VAR             reduce using rule 10 (const_list -> const_def .)
    BEGIN           reduce using rule 10 (const_list -> const_def .)
    FUNCTION        reduce using rule 10 (const_list -> const_def .)
    PROCEDURE       reduce using rule 10 (const_list -> const_def .)


state 20

    (11) const_def -> ID . EQ literal SEMICOLON

    EQ              shift and go to state 30


state 21

    (3) label_part -> LABEL label_list SEMICOLON .

    CONST           reduce using rule 3 (label_part -> LABEL label_list SEMICOLON .)
    TYPE            reduce using rule 3 (label_part -> LABEL label_list SEMICOLON .)
    VAR             reduce using rule 3 (label_part -> LABEL label_list SEMICOLON .)
    BEGIN           reduce using rule 3 (label_part -> LABEL label_list SEMICOLON .)
    FUNCTION        reduce using rule 3 (label_part -> LABEL label_list SEMICOLON .)
    PROCEDURE       reduce using rule 3 (label_part -> LABEL label_list SEMICOLON .)


state 22

    (5) label_list -> label_list COMMA . NUMBER

    NUMBER          shift and go to state 31


state 23

    (2) block -> label_part const_part type_part var_part . subprogram_declarations compound_stmt
    (41) subprogram_declarations -> . subprogram_declarations subprogram_declaration
    (42) subprogram_declarations -> . empty
    (134) empty -> .

    BEGIN           reduce using rule 134 (empty -> .)
    FUNCTION        reduce using rule 134 (empty -> .)
    PROCEDURE       reduce using rule 134 (empty -> .)

    subprogram_declarations        shift and go to state 32
    empty                          shift and go to state 33

state 24

    (17) var_part -> VAR . var_declaration_list
    (19) var_declaration_list -> . var_declaration_list var_declaration
    (20) var_declaration_list -> . var_declaration
    (21) var_declaration -> . id_list COLON type_specifier SEMICOLON
    (22) var_declaration -> . id_list COLON type_specifier error
    (23) id_list -> . id_list COMMA ID
    (24) id_list -> . ID

    ID              shift and go to state 37

    var_declaration_list           shift and go to state 34
    var_declaration                shift and go to state 35
    id_list                        shift and go to state 36

state 25

    (18) var_part -> empty .

    BEGIN           reduce using rule 18 (var_part -> empty .)
    FUNCTION        reduce using rule 18 (var_part -> empty .)
    PROCEDURE       reduce using rule 18 (var_part -> empty .)


state 26

    (12) type_part -> TYPE type_list .
    (14) type_list -> type_list . type_def
    (16) type_def -> . ID EQ type_specifier SEMICOLON

    VAR             reduce using rule 12 (type_part -> TYPE type_list .)
    BEGIN           reduce using rule 12 (type_part -> TYPE type_list .)
    FUNCTION        reduce using rule 12 (type_part -> TYPE type_list .)
    PROCEDURE       reduce using rule 12 (type_part -> TYPE type_list .)
    ID              shift and go to state 28

    type_def                       shift and go to state 38

state 27

    (15) type_list -> type_def .

    ID              reduce using rule 15 (type_list -> type_def .)
    VAR             reduce using rule 15 (type_list -> type_def .)
    BEGIN           reduce using rule 15 (type_list -> type_def .)
    FUNCTION        reduce using rule 15 (type_list -> type_def .)
    PROCEDURE       reduce using rule 15 (type_list -> type_def .)


state 28

    (16) type_def -> ID . EQ type_specifier SEMICOLON

    EQ              shift and go to state 39


state 29

    (9) const_list -> const_list const_def .

    ID              reduce using rule 9 (const_list -> const_list const_def .)
    TYPE            reduce using rule 9 (const_list -> const_list const_def .)
    VAR             reduce using rule 9 (const_list -> const_list const_def .)
    BEGIN           reduce using rule 9 (const_list -> const_list const_def .)
    FUNCTION        reduce using rule 9 (const_list -> const_list const_def .)
    PROCEDURE       reduce using rule 9 (const_list -> const_list const_def .)


state 30

    (11) const_def -> ID EQ . literal SEMICOLON
    (132) literal -> . NUMBER
    (133) literal -> . CHARCONST

    NUMBER          shift and go to state 41
    CHARCONST       shift and go to state 42

    literal                        shift and go to state 40

state 31

    (5) label_list -> label_list COMMA NUMBER .

    SEMICOLON       reduce using rule 5 (label_list -> label_list COMMA NUMBER .)
    COMMA           reduce using rule 5 (label_list -> label_list COMMA NUMBER .)


state 32
